--- a/ui/src/app/view/transport-calls-table/transport-calls-table.component.html
+++ b/ui/src/app/view/transport-calls-table/transport-calls-table.component.html
@@ -10,7 +10,7 @@
       <div class="p-col tableHeader">
         <div class="tableHeader__buttons">
           <p-button (onClick)="openCreationDialog()" class="p-button-raised p-button-rounded tableHeader__add_button"
-                    icon="pi pi-plus" pTooltip="{{ 'general.transportCall.create.tooltip' | translate }}"
+                    icon="pi pi-plus" pTooltip="{{ 'general.transportCall.create' | translate }}"
                     tooltipPosition="top" type="button"
                     tooltipStyleClass="ToolTipClass"></p-button>
         </div>
